--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
+		        	<!-- <li><a href="/about">About</a></li> -->
 	        		<li><a href="/cv/Joshua_Witter_CV_5.30.19.pdf">CV</a></li>
 	        		<!-- <li><a href="/blog">Blog</a></li> -->
 	    		</ul>
