--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<!-- <li><a href="/about">About</a></li> -->
+				<!-- <li><a href="/teaching">Teaching</a></li> -->
 	        		<li><a href="/cv/Joshua_Witter_CV_5.30.19.pdf">CV</a></li>
 	        		<!-- <li><a href="/blog">Blog</a></li> -->
 	    		</ul>
