--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
 	        		<li><a href="/">Home</a></li>
 		        	<!-- <li><a href="/about">About</a></li> -->
 				<li><a href="/teaching">Teaching</a></li>
+				<li><a href="/research">Research</a></li>
+
 	        		<li><a href="/cv/Joshua_Witter_CV_5.30.19.pdf">CV</a></li>
 	        		<!-- <li><a href="/blog">Blog</a></li> -->
 	    		</ul>
