--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 				<li><a href="/teaching">Teaching</a></li>
 				<li><a href="/research">Research</a></li>
 
-	        		<li><a href="/cv/Joshua_Witter_CV_5.30.19.pdf">CV</a></li>
+	        		<li><a href="/cv/Joshua_Witter_CV-7.22.2019.pdf">CV</a></li>
 	        		<!-- <li><a href="/blog">Blog</a></li> -->
 	    		</ul>
 			</nav>
