--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 				<li><a href="/teaching">Teaching</a></li>
 				<li><a href="/research">Research</a></li>
 
-	        		<li><a href="/cv/Josh_Witter__PhD_Economist_Resume_4_4_22.pdf">CV</a></li>
+	        		<li><a href="/cv/Josh_Witter__PhD_Economist_Resume_4_4_22.pdf">Resume</a></li>
 	        		<!-- <li><a href="/blog">Blog</a></li> -->
 	    		</ul>
 			</nav>
