--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 				<li><a href="/teaching">Teaching</a></li>
 				<li><a href="/research">Research</a></li>
 
-	        		<li><a href="/cv/Josh_Witter__PhD_Economist_Resume_4_4_22.pdf">Resume</a></li>
+	        		<li><a href="/cv/Josh_Witter_Resume___Walmart___12_4_25.pdf">Resume</a></li>
 	        		<!-- <li><a href="/blog">Blog</a></li> -->
 	    		</ul>
 			</nav>
@@ -24,7 +24,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:joshwitter@tamu.edu">email</a></li>
+	        		<li><a href="mailto:witter.joshua@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/joshwitter">github.com/joshwitter</a></li>
 				</ul>
 			</footer>
